--- a/src/App.css
+++ b/src/App.css
@@ -15,12 +15,14 @@
 .app-wrapper {
   background-color: #12343b;
   min-width: 450px;
-  min-height: 650px;
+  min-height: 500px;
   padding: 30px;
   box-sizing: border-box;
   border-radius: 10px;
   box-shadow: 3px 6px 40ox #000;
   margin-bottom: 10px;
+  margin-top: 50px;
+
 }
 
 .header h1 {
